tests/fail/err.stderr
error[E0404]: Symbol 'printf' not found in module 'std/io'
 --> tests/fail/err.tk:14:1
    |
 14 | import std/io::printf
    | ^
error[E0461]: Illegal use of permission suffixes (# or $) in everyday contexts. Modifiers are strictly limited to declarations or explicit mutable method calls.
 --> tests/fail/err.tk:41:5
    |
 41 |     c# = 10 // Error: c is immutable
    |     ^
